restaurant-demo-app/src/main/java/com/example/restaurantdemoapp/errors/GenericException.java
package com.example.restaurantdemoapp.errors;

import com.example.restaurantdemoapp.utils.BaseError;
import com.example.restaurantdemoapp.utils.Constants;

public class GenericException extends BaseError {

    public GenericException() {
        super(Constants.GENERIC_ERROR);
    }
}
